//默认是Proto2
syntax = "proto3";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
// 指定包名
//package pb;
option go_package = "./grpc";   //两个参数一个是生成地址，一个是包名

service SDSC {
  rpc GetData(req) returns (res){}
  rpc DeleteData(req) returns (google.protobuf.Empty){}
  rpc UpdateData(reqUpdate) returns (google.protobuf.Empty){}
}

message req {
  string key = 1;
}

message reqUpdate {
  string key = 1;
  google.protobuf.Any value = 2;
}

message res {
    google.protobuf.Any value = 1;
}
